tp2 compilation/y.output
Rules useless in parser due to conflicts

   11 ST2: %empty


State 18 conflicts: 1 reduce/reduce
State 28 conflicts: 1 reduce/reduce
State 48 conflicts: 2 shift/reduce
State 49 conflicts: 2 shift/reduce


Grammar

    0 $accept: Input $end

    1 Input: %empty
    2      | Input S

    3 S: ST1 ';'

    4 ST1: SELECT attributList FROM tableList
    5    | SELECT error
    6    | SELECT DISTINCT attributList FROM tableList
    7    | SELECT DISTINCT attributList FROM error
    8    | SELECT attributList FROM tableList ST2

    9 ST2: WHERE error
   10    | WHERE COND ST3
   11    | %empty
   12    | WHERE COND

   13 ST3: GROUP attributList ST4
   14    | ST4

   15 ST4: HAVING COND ST5
   16    | ST5

   17 ST5: ORDER attributList ST6
   18    | %empty

   19 ST6: DESC
   20    | ASC

   21 attributList: ID ',' attributList
   22             | '*'
   23             | ID

   24 tableList: ID ',' tableList
   25          | ID

   26 COND: COND OR COND
   27     | COND AND COND
   28     | E

   29 E: F '=' F
   30  | F '<' F
   31  | F '>' F
   32  | F '=' '=' F
   33  | F '<' '=' F
   34  | F '>' '=' F
   35  | F '!' '=' F
   36  | F OR F
   37  | F AND F

   38 F: ID
   39  | NUM


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 35
    '*' (42) 22
    ',' (44) 21 24
    ';' (59) 3
    '<' (60) 30 33
    '=' (61) 29 32 33 34 35
    '>' (62) 31 34
    error (256) 5 7 9
    ID (258) 21 23 24 25 38
    NUM (259) 39
    SELECT (260) 4 5 6 7 8
    FROM (261) 4 6 7 8
    DISTINCT (262) 6 7
    WHERE (263) 9 10 12
    GROUP (264) 13
    HAVING (265) 15
    ORDER (266) 17
    DESC (267) 19
    ASC (268) 20
    AND (269) 27 37
    OR (270) 26 36


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    Input (24)
        on left: 1 2
        on right: 0 2
    S (25)
        on left: 3
        on right: 2
    ST1 (26)
        on left: 4 5 6 7 8
        on right: 3
    ST2 (27)
        on left: 9 10 11 12
        on right: 8
    ST3 (28)
        on left: 13 14
        on right: 10
    ST4 (29)
        on left: 15 16
        on right: 13 14
    ST5 (30)
        on left: 17 18
        on right: 15 16
    ST6 (31)
        on left: 19 20
        on right: 17
    attributList (32)
        on left: 21 22 23
        on right: 4 6 7 8 13 17 21
    tableList (33)
        on left: 24 25
        on right: 4 6 8 24
    COND (34)
        on left: 26 27 28
        on right: 10 12 15 26 27
    E (35)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 28
    F (36)
        on left: 38 39
        on right: 29 30 31 32 33 34 35 36 37


State 0

    0 $accept: . Input $end

    $default  reduce using rule 1 (Input)

    Input  go to state 1


State 1

    0 $accept: Input . $end
    2 Input: Input . S

    $end    shift, and go to state 2
    SELECT  shift, and go to state 3

    S    go to state 4
    ST1  go to state 5


State 2

    0 $accept: Input $end .

    $default  accept


State 3

    4 ST1: SELECT . attributList FROM tableList
    5    | SELECT . error
    6    | SELECT . DISTINCT attributList FROM tableList
    7    | SELECT . DISTINCT attributList FROM error
    8    | SELECT . attributList FROM tableList ST2

    error     shift, and go to state 6
    ID        shift, and go to state 7
    DISTINCT  shift, and go to state 8
    '*'       shift, and go to state 9

    attributList  go to state 10


State 4

    2 Input: Input S .

    $default  reduce using rule 2 (Input)


State 5

    3 S: ST1 . ';'

    ';'  shift, and go to state 11


State 6

    5 ST1: SELECT error .

    $default  reduce using rule 5 (ST1)


State 7

   21 attributList: ID . ',' attributList
   23             | ID .

    ','  shift, and go to state 12

    $default  reduce using rule 23 (attributList)


State 8

    6 ST1: SELECT DISTINCT . attributList FROM tableList
    7    | SELECT DISTINCT . attributList FROM error

    ID   shift, and go to state 7
    '*'  shift, and go to state 9

    attributList  go to state 13


State 9

   22 attributList: '*' .

    $default  reduce using rule 22 (attributList)


State 10

    4 ST1: SELECT attributList . FROM tableList
    8    | SELECT attributList . FROM tableList ST2

    FROM  shift, and go to state 14


State 11

    3 S: ST1 ';' .

    $default  reduce using rule 3 (S)


State 12

   21 attributList: ID ',' . attributList

    ID   shift, and go to state 7
    '*'  shift, and go to state 9

    attributList  go to state 15


State 13

    6 ST1: SELECT DISTINCT attributList . FROM tableList
    7    | SELECT DISTINCT attributList . FROM error

    FROM  shift, and go to state 16


State 14

    4 ST1: SELECT attributList FROM . tableList
    8    | SELECT attributList FROM . tableList ST2

    ID  shift, and go to state 17

    tableList  go to state 18


State 15

   21 attributList: ID ',' attributList .

    $default  reduce using rule 21 (attributList)


State 16

    6 ST1: SELECT DISTINCT attributList FROM . tableList
    7    | SELECT DISTINCT attributList FROM . error

    error  shift, and go to state 19
    ID     shift, and go to state 17

    tableList  go to state 20


State 17

   24 tableList: ID . ',' tableList
   25          | ID .

    ','  shift, and go to state 21

    $default  reduce using rule 25 (tableList)


State 18

    4 ST1: SELECT attributList FROM tableList .
    8    | SELECT attributList FROM tableList . ST2

    WHERE  shift, and go to state 22

    ';'       reduce using rule 4 (ST1)
    ';'       [reduce using rule 11 (ST2)]
    $default  reduce using rule 4 (ST1)

    ST2  go to state 23


State 19

    7 ST1: SELECT DISTINCT attributList FROM error .

    $default  reduce using rule 7 (ST1)


State 20

    6 ST1: SELECT DISTINCT attributList FROM tableList .

    $default  reduce using rule 6 (ST1)


State 21

   24 tableList: ID ',' . tableList

    ID  shift, and go to state 17

    tableList  go to state 24


State 22

    9 ST2: WHERE . error
   10    | WHERE . COND ST3
   12    | WHERE . COND

    error  shift, and go to state 25
    ID     shift, and go to state 26
    NUM    shift, and go to state 27

    COND  go to state 28
    E     go to state 29
    F     go to state 30


State 23

    8 ST1: SELECT attributList FROM tableList ST2 .

    $default  reduce using rule 8 (ST1)


State 24

   24 tableList: ID ',' tableList .

    $default  reduce using rule 24 (tableList)


State 25

    9 ST2: WHERE error .

    $default  reduce using rule 9 (ST2)


State 26

   38 F: ID .

    $default  reduce using rule 38 (F)


State 27

   39 F: NUM .

    $default  reduce using rule 39 (F)


State 28

   10 ST2: WHERE COND . ST3
   12    | WHERE COND .
   26 COND: COND . OR COND
   27     | COND . AND COND

    GROUP   shift, and go to state 31
    HAVING  shift, and go to state 32
    ORDER   shift, and go to state 33
    AND     shift, and go to state 34
    OR      shift, and go to state 35

    ';'       reduce using rule 12 (ST2)
    ';'       [reduce using rule 18 (ST5)]
    $default  reduce using rule 12 (ST2)

    ST3  go to state 36
    ST4  go to state 37
    ST5  go to state 38


State 29

   28 COND: E .

    $default  reduce using rule 28 (COND)


State 30

   29 E: F . '=' F
   30  | F . '<' F
   31  | F . '>' F
   32  | F . '=' '=' F
   33  | F . '<' '=' F
   34  | F . '>' '=' F
   35  | F . '!' '=' F
   36  | F . OR F
   37  | F . AND F

    AND  shift, and go to state 39
    OR   shift, and go to state 40
    '='  shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '!'  shift, and go to state 44


State 31

   13 ST3: GROUP . attributList ST4

    ID   shift, and go to state 7
    '*'  shift, and go to state 9

    attributList  go to state 45


State 32

   15 ST4: HAVING . COND ST5

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    COND  go to state 46
    E     go to state 29
    F     go to state 30


State 33

   17 ST5: ORDER . attributList ST6

    ID   shift, and go to state 7
    '*'  shift, and go to state 9

    attributList  go to state 47


State 34

   27 COND: COND AND . COND

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    COND  go to state 48
    E     go to state 29
    F     go to state 30


State 35

   26 COND: COND OR . COND

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    COND  go to state 49
    E     go to state 29
    F     go to state 30


State 36

   10 ST2: WHERE COND ST3 .

    $default  reduce using rule 10 (ST2)


State 37

   14 ST3: ST4 .

    $default  reduce using rule 14 (ST3)


State 38

   16 ST4: ST5 .

    $default  reduce using rule 16 (ST4)


State 39

   37 E: F AND . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 50


State 40

   36 E: F OR . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 51


State 41

   29 E: F '=' . F
   32  | F '=' . '=' F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27
    '='  shift, and go to state 52

    F  go to state 53


State 42

   30 E: F '<' . F
   33  | F '<' . '=' F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27
    '='  shift, and go to state 54

    F  go to state 55


State 43

   31 E: F '>' . F
   34  | F '>' . '=' F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27
    '='  shift, and go to state 56

    F  go to state 57


State 44

   35 E: F '!' . '=' F

    '='  shift, and go to state 58


State 45

   13 ST3: GROUP attributList . ST4

    HAVING  shift, and go to state 32
    ORDER   shift, and go to state 33

    $default  reduce using rule 18 (ST5)

    ST4  go to state 59
    ST5  go to state 38


State 46

   15 ST4: HAVING COND . ST5
   26 COND: COND . OR COND
   27     | COND . AND COND

    ORDER  shift, and go to state 33
    AND    shift, and go to state 34
    OR     shift, and go to state 35

    $default  reduce using rule 18 (ST5)

    ST5  go to state 60


State 47

   17 ST5: ORDER attributList . ST6

    DESC  shift, and go to state 61
    ASC   shift, and go to state 62

    ST6  go to state 63


State 48

   26 COND: COND . OR COND
   27     | COND . AND COND
   27     | COND AND COND .

    AND  shift, and go to state 34
    OR   shift, and go to state 35

    AND       [reduce using rule 27 (COND)]
    OR        [reduce using rule 27 (COND)]
    $default  reduce using rule 27 (COND)


State 49

   26 COND: COND . OR COND
   26     | COND OR COND .
   27     | COND . AND COND

    AND  shift, and go to state 34
    OR   shift, and go to state 35

    AND       [reduce using rule 26 (COND)]
    OR        [reduce using rule 26 (COND)]
    $default  reduce using rule 26 (COND)


State 50

   37 E: F AND F .

    $default  reduce using rule 37 (E)


State 51

   36 E: F OR F .

    $default  reduce using rule 36 (E)


State 52

   32 E: F '=' '=' . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 64


State 53

   29 E: F '=' F .

    $default  reduce using rule 29 (E)


State 54

   33 E: F '<' '=' . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 65


State 55

   30 E: F '<' F .

    $default  reduce using rule 30 (E)


State 56

   34 E: F '>' '=' . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 66


State 57

   31 E: F '>' F .

    $default  reduce using rule 31 (E)


State 58

   35 E: F '!' '=' . F

    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    F  go to state 67


State 59

   13 ST3: GROUP attributList ST4 .

    $default  reduce using rule 13 (ST3)


State 60

   15 ST4: HAVING COND ST5 .

    $default  reduce using rule 15 (ST4)


State 61

   19 ST6: DESC .

    $default  reduce using rule 19 (ST6)


State 62

   20 ST6: ASC .

    $default  reduce using rule 20 (ST6)


State 63

   17 ST5: ORDER attributList ST6 .

    $default  reduce using rule 17 (ST5)


State 64

   32 E: F '=' '=' F .

    $default  reduce using rule 32 (E)


State 65

   33 E: F '<' '=' F .

    $default  reduce using rule 33 (E)


State 66

   34 E: F '>' '=' F .

    $default  reduce using rule 34 (E)


State 67

   35 E: F '!' '=' F .

    $default  reduce using rule 35 (E)
